Changed name XD

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Responsive Horizontal Accordion Demo</title>
+<title>Android Scout</title>
 <style class="cp-pen-styles">
 @import url(http://fonts.googleapis.com/css?family=Open+Sans);
 @import url(http://fonts.googleapis.com/css?family=Montserrat:700);
