--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
 <body>
 <div class='contain'>
   <section class='home active'>
-    <h1 class='title'>Home</h1>
+  <h2>AndroidScout</h2>
   </section>
-  <section class='about'>
-    <h1 class='title'>About</h1>
+  <section class='latest'>
+    <h2>Latest Reviews</h2>
   </section>
-  <section class='work'>
-    <h1 class='title'>Work</h1>
+  <section class='eariler'>
+    <h2>Eariler Reviews</h2>
   </section>
-  <section class='contact'>
-    <h1 class='title'>Contact</h1>
+  <section class='older'>
+    <h2>Older Reviews</h2>
   </section>
 </div>
 <a class='toggle' href='#'>
