--- a/index.html
+++ b/index.html
@@ -1,44 +1,107 @@
 <!DOCTYPE html>
+<!--
+╔═╗╔═╗────────────────╔╗────────╔╗
+║║╚╝║║────────────────║║───────╔╝╚╗
+║╔╗╔╗║╔╗╔═╗─╔╗╔╗╔╗╔══╗║║─╔╗╔══╗╚╗╔╝
+║║║║║║╠╣║╔╗╗╠╣║╚╝║║╔╗║║║─╠╣║══╣─║║
+║║║║║║║║║║║║║║║║║║║╔╗║║╚╗║║╠══║─║╚╗
+╚╝╚╝╚╝╚╝╚╝╚╝╚╝╚╩╩╝╚╝╚╝╚═╝╚╝╚══╝─╚═╝
+╔═══╗─────╔═╗─╔╗
+║╔═╗║─────║╔╝╔╝╚╗
+║╚══╗╔══╗╔╝╚╗╚╗╔╝╔╗╔╗╔╗╔══╗╔═╗╔══╗
+╚══╗║║╔╗║╚╗╔╝─║║─║╚╝╚╝║║╔╗║║╔╝║║═╣
+║╚═╝║║╚╝║─║║──║╚╗╚╗╔╗╔╝║╔╗║║║─║║═╣
+╚═══╝╚══╝─╚╝──╚═╝─╚╝╚╝─╚╝╚╝╚╝─╚══╝
+
+- Created by Ryan Guarascia on 2016-01-15.
+- Copyright © 2016 AndroidScout. All rights reserved.
+- Email of WebMaster: minimalistsoftware@gmail.com
+-->
 <html>
 <head>
-	<title>AndroidScout</title>
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/css/materialize.min.css">
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
- 	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/js/materialize.min.js"></script>
- 	<link rel="stylesheet" href="./css/menu.css">
+<title>AndroidScout</title>
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+<link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+<link rel="stylesheet" href="./css/menu.css">
 </head>
 <body>
-<div class='contain'>
-  <section class='home active'>
-  <h2>AndroidScout</h2>
+<div class="contain">
+  <section class="home active">
+    <h2>AndroidScout</h2>
+    <div class="container">
+      <div align="center" class="wrapper">
+        <div class="card small">
+          <div class="card-image waves-effect waves-block waves-light"> <img class="activator" src="https://raw.githubusercontent.com/AndroidScout/AndroidScout.github.io/master/images/thumb-1.png"> </div>
+          <div class="card-content"> <span class="card-title activator grey-text text-darken-4"><a href="#">[Review]The New LG G18</a><i class="material-icons right">launch</i></span>
+            <p>How does the LG"s blah  blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah</p>
+          </div>
+          <div class="card-reveal"> <span class="card-title grey-text text-darken-4">
+            <h4>More info...</h4>
+            <i class="material-icons right">close</i></span>
+            <p class="flowtext-">Give a quick summary of the article here blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah</p>
+          </div>
+        </div>
+        <div class="card small">
+          <div class="card-image waves-effect waves-block waves-light"> <img class="activator" src="https://raw.githubusercontent.com/AndroidScout/AndroidScout.github.io/master/images/thumb-1.png"> </div>
+          <div class="card-content"> <span class="card-title activator grey-text text-darken-4"><a href="#">[Review]The New LG G18</a><i class="material-icons right">launch</i></span>
+            <p>How does the LG"s blah  blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah</p>
+          </div>
+          <div class="card-reveal"> <span class="card-title grey-text text-darken-4">
+            <h4>More info...</h4>
+            <i class="material-icons right">close</i></span>
+            <p class="flowtext-">Give a quick summary of the article here blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah</p>
+          </div>
+        </div>
+        <div class="card small">
+          <div class="card-image waves-effect waves-block waves-light"> <img class="activator" src="https://raw.githubusercontent.com/AndroidScout/AndroidScout.github.io/master/images/thumb-1.png"> </div>
+          <div class="card-content"> <span class="card-title activator grey-text text-darken-4"><a href="#">[Review]The New LG G18</a><i class="material-icons right">launch</i></span>
+            <p>How does the LG"s blah  blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah</p>
+          </div>
+          <div class="card-reveal"> <span class="card-title grey-text text-darken-4">
+            <h4>More info...</h4>
+            <i class="material-icons right">close</i></span>
+            <p class="flowtext-">Give a quick summary of the article here blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah</p>
+          </div>
+        </div>
+        <div class="card small">
+          <div class="card-image waves-effect waves-block waves-light"> <img class="activator" src="https://raw.githubusercontent.com/AndroidScout/AndroidScout.github.io/master/images/thumb-1.png"> </div>
+          <div class="card-content"> <span class="card-title activator grey-text text-darken-4"><a href="#">[Review]The New LG G18</a><i class="material-icons right">launch</i></span>
+            <p>How does the LG"s blah  blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah</p>
+          </div>
+          <div class="card-reveal"> <span class="card-title grey-text text-darken-4">
+            <h4>More info...</h4>
+            <i class="material-icons right">close</i></span>
+            <p class="flowtext-">Give a quick summary of the article here blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah</p>
+          </div>
+        </div>
+      </div>
+    </div>
   </section>
-  <section class='latest'>
+  <section class="latest">
     <h2>Latest Reviews</h2>
   </section>
-  <section class='eariler'>
+  <section class="eariler">
     <h2>Eariler Reviews</h2>
   </section>
-  <section class='older'>
+  <section class="older">
     <h2>Older Reviews</h2>
   </section>
 </div>
-<a class='toggle' href='#'>
-  <span class='bar'></span>
-  <span class='bar'></span>
-  <span class='bar'></span>
-</a>
+<a class="toggle" href="#"> <span class="bar"></span> <span class="bar"></span> <span class="bar"></span> </a> 
+<script src="https://code.jquery.com/jquery-2.1.1.min.js"></script> 
+<script src="./js/materialize.js"></script> 
 <script type="text/javascript">
-	$('a.toggle').on('click', function(){
-  $('section').scrollTop(0);
-  $('.contain').toggleClass('active');
+  $("a.toggle").on("click", function(){
+  $("section").scrollTop(0);
+  $(".contain").toggleClass("active");
   return false;
 })
 
-$('section').on('click', function(){
-//  $(this).closest('section').prependTo('.contain');
-  $('section').removeClass('active');
-  $(this).addClass('active');
-  $('.contain').removeClass('active');
+$("section").on("click", function(){
+//  $(this).closest("section").prependTo(".contain");
+  $("section").removeClass("active");
+  $(this).addClass("active");
+  $(".contain").removeClass("active");
 })
 </script>
 </body>
