--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 ╚═══╝╚══╝─╚╝──╚═╝─╚╝╚╝─╚╝╚╝╚╝─╚══╝
 
 - Created by Ryan Guarascia on 2016-01-15.
+- Contributors: Eran Machlev & Garrett Tucker
 - Copyright © 2016 AndroidScout. All rights reserved.
 - Email of WebMaster: minimalistsoftware@gmail.com
 -->
