--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 <!-- Imports-->
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+<link href="css/transition.css" type="text/css" rel="stylesheet" media="screen,projection"/>
 <link rel="stylesheet" href="./css/menu.css">
 </head>
 <body>
