--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
 <link href="css/transition.css" type="text/css" rel="stylesheet" media="screen,projection"/>
 <link rel="stylesheet" href="./css/menu.css">
 </head>
-<body>
+<body onload="document.body.setAttribute('class','loaded')">
+
 <div class="contain">
 
   <section class="home active">
