--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <link rel="stylesheet" type="text/css" href="css/transition.css" media="screen" />
 <link rel="stylesheet" href="./css/menu.css">
 </head>
-<body onload="document.body.setAttribute('class','loaded')">
+<body onload="transition.css.body.setAttribute('class','loaded')">
 
 <div class="contain">
 
