--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
 <html>
 <head>
 <title>AndroidScout</title>
-<!-- Imports-->
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
 <link rel="stylesheet" type="text/css" href="./css/transition.css" media="screen" />
@@ -30,31 +29,10 @@
 <body class="fadein">
 
 <div class="contain">
-
   <section class="home active">
-
     <h2>AndroidScout</h2>
-    <div class="container"> <!-- Add margins to sides -->
-      <div align="center" class="wrapper"> <!-- Aligns the content no matter size -->
-
-        <!-- Card -->
-        <div class="card small">
-            <!-- Thumbnail picture -->
-          <div class="card-image waves-effect waves-block waves-light"> <img class="activator" src="https://raw.githubusercontent.com/AndroidScout/AndroidScout.github.io/master/images/thumb-1.png"> </div>
-            <!-- Title -->
-          <div class="card-content"> <span class="card-title activator grey-text text-darken-4"><a href="#">[Review]The New LG G18</a><i class="material-icons right">launch</i></span>
-            <!-- Small decription -->
-            <p>How does the LG"s blah  blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah</p>
-          </div>
-          <div class="card-reveal"> <span class="card-title grey-text text-darken-4">
-            <!-- expand card -->
-            <h4>More info...</h4>
-            <i class="material-icons right">close</i></span>
-            <p class="flowtext-">Give a quick summary of the article here blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah</p>
-          </div> <!-- end of reveal -->
-        </div> <!-- End of card -->
-
-        <!-- Card -->
+    <div class="container">
+      <div align="center" class="wrapper">
         <div class="card small">
           <div class="card-image waves-effect waves-block waves-light"> <img class="activator" src="https://raw.githubusercontent.com/AndroidScout/AndroidScout.github.io/master/images/thumb-1.png"> </div>
           <div class="card-content"> <span class="card-title activator grey-text text-darken-4"><a href="#">[Review]The New LG G18</a><i class="material-icons right">launch</i></span>
@@ -66,8 +44,6 @@
             <p class="flowtext-">Give a quick summary of the article here blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah</p>
           </div>
         </div>
-
-        <!-- Card -->
         <div class="card small">
           <div class="card-image waves-effect waves-block waves-light"> <img class="activator" src="https://raw.githubusercontent.com/AndroidScout/AndroidScout.github.io/master/images/thumb-1.png"> </div>
           <div class="card-content"> <span class="card-title activator grey-text text-darken-4"><a href="#">[Review]The New LG G18</a><i class="material-icons right">launch</i></span>
@@ -79,8 +55,6 @@
             <p class="flowtext-">Give a quick summary of the article here blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah</p>
           </div>
         </div>
-
-        <!-- Card -->
         <div class="card small">
           <div class="card-image waves-effect waves-block waves-light"> <img class="activator" src="https://raw.githubusercontent.com/AndroidScout/AndroidScout.github.io/master/images/thumb-1.png"> </div>
           <div class="card-content"> <span class="card-title activator grey-text text-darken-4"><a href="#">[Review]The New LG G18</a><i class="material-icons right">launch</i></span>
@@ -92,9 +66,20 @@
             <p class="flowtext-">Give a quick summary of the article here blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah</p>
           </div>
         </div>
-      </div> <!-- end of wrapper -->
-    </div> <!-- end of container-->
-  </section><!-- end of page -->
+        <div class="card small">
+          <div class="card-image waves-effect waves-block waves-light"> <img class="activator" src="https://raw.githubusercontent.com/AndroidScout/AndroidScout.github.io/master/images/thumb-1.png"> </div>
+          <div class="card-content"> <span class="card-title activator grey-text text-darken-4"><a href="#">[Review]The New LG G18</a><i class="material-icons right">launch</i></span>
+            <p>How does the LG"s blah  blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah</p>
+          </div>
+          <div class="card-reveal"> <span class="card-title grey-text text-darken-4">
+            <h4>More info...</h4>
+            <i class="material-icons right">close</i></span>
+            <p class="flowtext-">Give a quick summary of the article here blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
   <section class="latest">
     <h2>Latest Reviews</h2>
   </section>
