add fade-in animations for the body and the cards

--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
 <!-- Imports-->
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
-<link rel="stylesheet" type="text/css" href="./css/transition.css" media="screen" />
 <link rel="stylesheet" href="./css/menu.css">
 </head>
-<body class="fadein">
+
+<body class="fade-in bod">
 
 <div class="contain">
 
@@ -38,7 +38,7 @@
       <div align="center" class="wrapper"> <!-- Aligns the content no matter size -->
 
         <!-- Card -->
-        <div class="card small">
+        <div class="card small fade-in one">
             <!-- Thumbnail picture -->
           <div class="card-image waves-effect waves-block waves-light"> <img class="activator" src="https://raw.githubusercontent.com/AndroidScout/AndroidScout.github.io/master/images/thumb-1.png"> </div>
             <!-- Title -->
@@ -55,7 +55,7 @@
         </div> <!-- End of card -->
 
         <!-- Card -->
-        <div class="card small">
+        <div class="card small fade-in two">
           <div class="card-image waves-effect waves-block waves-light"> <img class="activator" src="https://raw.githubusercontent.com/AndroidScout/AndroidScout.github.io/master/images/thumb-1.png"> </div>
           <div class="card-content"> <span class="card-title activator grey-text text-darken-4"><a href="#">[Review]The New LG G18</a><i class="material-icons right">launch</i></span>
             <p>How does the LG"s blah  blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah</p>
@@ -68,7 +68,7 @@
         </div>
 
         <!-- Card -->
-        <div class="card small">
+        <div class="card small fade-in three">
           <div class="card-image waves-effect waves-block waves-light"> <img class="activator" src="https://raw.githubusercontent.com/AndroidScout/AndroidScout.github.io/master/images/thumb-1.png"> </div>
           <div class="card-content"> <span class="card-title activator grey-text text-darken-4"><a href="#">[Review]The New LG G18</a><i class="material-icons right">launch</i></span>
             <p>How does the LG"s blah  blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah</p>
@@ -81,7 +81,7 @@
         </div>
 
         <!-- Card -->
-        <div class="card small">
+        <div class="card small fade-in four">
           <div class="card-image waves-effect waves-block waves-light"> <img class="activator" src="https://raw.githubusercontent.com/AndroidScout/AndroidScout.github.io/master/images/thumb-1.png"> </div>
           <div class="card-content"> <span class="card-title activator grey-text text-darken-4"><a href="#">[Review]The New LG G18</a><i class="material-icons right">launch</i></span>
             <p>How does the LG"s blah  blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah</p>
