--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
 
 <body class="fade-in bod">
 
+<div class="triangle_right">
+<div class="triangle_left">
 <div class="contain">
 
   <section class="home active">
