--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <body class="fade-in bod">
 
 <div class="triangle_right">
-<div class="vertical_text"
+<div class="vertical_text">
 <div class="left_triangle">
 <div class="contain">
 
