--- a/index.html
+++ b/index.html
@@ -30,7 +30,11 @@
 <body class="fade-in bod">
 
 <div class="triangle_right">
+  <p>Android Scout</p>
+  </div>
 <div class="left_triangle">
+  <p>Android Scout</p>
+  </div>
 <div class="contain">
 
   <section class="home active">
