--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 - Email of WebMaster: minimalistsoftware@gmail.com
 -->
 <html>
+  <style> p { white-space: pre; }</style>
 <head>
 <title>AndroidScout</title>
 <!-- Imports-->
@@ -30,10 +31,38 @@
 <body class="fade-in bod">
 
 <div class="triangle_right">
-  <p>Android Scout</p>
+  <p>
+     A
+     N
+     D
+     R
+     O
+     I
+     D
+     
+     S
+     C
+     O
+     U
+     T
+  </p>
   </div>
 <div class="left_triangle">
-  <p>Android Scout</p>
+  <p>
+    A
+    N
+    D
+    R
+    O
+    I
+    D
+    
+    S
+    C
+    O
+    U
+    T
+  </p>
   </div>
 <div class="contain">
 
