--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 - Email of WebMaster: minimalistsoftware@gmail.com
 -->
 <html>
-  <style> p { white-space: pre; }</style>
+  <style> h1 { white-space: pre; }</style>
 <head>
 <title>AndroidScout</title>
 <!-- Imports-->
@@ -31,7 +31,7 @@
 <body class="fade-in bod">
 
 <div class="triangle_right">
-  <p>
+  <h1>
      A
      N
      D
@@ -45,25 +45,9 @@
      O
      U
      T
-  </p>
+  </h1>
   </div>
 <div class="left_triangle">
-  <p>
-    A
-    N
-    D
-    R
-    O
-    I
-    D
-    
-    S
-    C
-    O
-    U
-    T
-  </p>
-  </div>
 <div class="contain">
 
   <section class="home active">
