--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 <body class="fade-in bod">
 
-<div class="triangle_right">
+<div class="triangle_right">Android Scout</div>
 <div class="left_triangle">
 <div class="contain">
 
