--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
 
 <body class="fade-in bod">
 
-<div class="triangle_right">Android Scout</div>
+<div class="triangle_right">
+  <span class="thattexttho">Android Scout</span>
+</div>
 <div class="left_triangle">
 <div class="contain">
 
