--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <body class="fade-in bod">
 
 <div class="triangle_right">
-  <span class="thattexttho">Android Scout!</span>
+  <span class="thattexttho">Android Scout</span>
 </div>
 <div class="left_triangle">
 <div class="contain">
