--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 <!-- Imports-->
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+<link href="css/hover.css" rel="stylesheet" media="all">
 <link rel="stylesheet" href="./css/menu.css">
 </head>
 
@@ -32,7 +33,9 @@
 <div class="triangle_right">
   <span class="thattexttho">Android Scout</span>
 </div>
-<div class="left_triangle">
+
+<div class="left_triangle"></div>
+
 <div class="contain">
 
   <section class="home active">
@@ -42,7 +45,7 @@
       <div align="center" class="wrapper"> <!-- Aligns the content no matter size -->
 
         <!-- Card -->
-        <div class="card small fade-in one">
+        <div class="card small hvr-grow fade-in one">
             <!-- Thumbnail picture -->
           <div class="card-image waves-effect waves-block waves-light"> <img class="activator" src="https://raw.githubusercontent.com/AndroidScout/AndroidScout.github.io/master/images/thumb-1.png"> </div>
             <!-- Title -->
@@ -59,7 +62,7 @@
         </div> <!-- End of card -->
 
         <!-- Card -->
-        <div class="card small fade-in two">
+        <div class="card small hvr-grow fade-in two">
           <div class="card-image waves-effect waves-block waves-light"> <img class="activator" src="https://raw.githubusercontent.com/AndroidScout/AndroidScout.github.io/master/images/thumb-1.png"> </div>
           <div class="card-content"> <span class="card-title activator grey-text text-darken-4"><a href="#">[Review]The New LG G18</a><i class="material-icons right">launch</i></span>
             <p>How does the LG"s blah  blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah</p>
@@ -72,7 +75,7 @@
         </div>
 
         <!-- Card -->
-        <div class="card small fade-in three">
+        <div class="card small hvr-grow fade-in three">
           <div class="card-image waves-effect waves-block waves-light"> <img class="activator" src="https://raw.githubusercontent.com/AndroidScout/AndroidScout.github.io/master/images/thumb-1.png"> </div>
           <div class="card-content"> <span class="card-title activator grey-text text-darken-4"><a href="#">[Review]The New LG G18</a><i class="material-icons right">launch</i></span>
             <p>How does the LG"s blah  blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah</p>
@@ -85,7 +88,7 @@
         </div>
 
         <!-- Card -->
-        <div class="card small fade-in four">
+        <div class="card small hvr-grow fade-in four">
           <div class="card-image waves-effect waves-block waves-light"> <img class="activator" src="https://raw.githubusercontent.com/AndroidScout/AndroidScout.github.io/master/images/thumb-1.png"> </div>
           <div class="card-content"> <span class="card-title activator grey-text text-darken-4"><a href="#">[Review]The New LG G18</a><i class="material-icons right">launch</i></span>
             <p>How does the LG"s blah  blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah</p>
@@ -113,18 +116,26 @@
 <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script> 
 <script src="./js/materialize.js"></script> 
 <script type="text/javascript">
-  $("a.toggle").on("click", function(){
-  $("section").scrollTop(0);
+
+  $("a.toggle").on("click", toggle_out)
+
+$("section").on("click", toggle_in)
+
+function toggle_out() {
+
+	$("section").scrollTop(0);
   $(".contain").toggleClass("active");
   return false;
-})
+}
 
-$("section").on("click", function(){
+function toggle_in() {
+
 //  $(this).closest("section").prependTo(".contain");
   $("section").removeClass("active");
   $(this).addClass("active");
   $(".contain").removeClass("active");
-})
+}
+
 </script>
 </body>
 </html>
