Changed the cards Grow animation to Float

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <div align="center" class="wrapper"> <!-- Aligns the content no matter size -->
 
         <!-- Card -->
-        <div class="card small hvr-grow fade-in one">
+        <div class="card small hvr-float fade-in one">
             <!-- Thumbnail picture -->
           <div class="card-image waves-effect waves-block waves-light"> <img class="activator" src="https://raw.githubusercontent.com/AndroidScout/AndroidScout.github.io/master/images/thumb-1.png"> </div>
             <!-- Title -->
@@ -60,7 +60,7 @@
         </div> <!-- End of card -->
 
         <!-- Card -->
-        <div class="card small hvr-grow fade-in two">
+        <div class="card small hvr-float fade-in two">
           <div class="card-image waves-effect waves-block waves-light"> <img class="activator" src="https://raw.githubusercontent.com/AndroidScout/AndroidScout.github.io/master/images/thumb-1.png"> </div>
           <div class="card-content"> <span class="card-title activator grey-text text-darken-4"><a href="#">[Review]The New LG G18</a><i class="material-icons right">launch</i></span>
             <p>How does the LG"s blah  blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah</p>
@@ -73,7 +73,7 @@
         </div>
 
         <!-- Card -->
-        <div class="card small hvr-grow fade-in three">
+        <div class="card small hvr-float fade-in three">
           <div class="card-image waves-effect waves-block waves-light"> <img class="activator" src="https://raw.githubusercontent.com/AndroidScout/AndroidScout.github.io/master/images/thumb-1.png"> </div>
           <div class="card-content"> <span class="card-title activator grey-text text-darken-4"><a href="#">[Review]The New LG G18</a><i class="material-icons right">launch</i></span>
             <p>How does the LG"s blah  blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah</p>
@@ -86,7 +86,7 @@
         </div>
 
         <!-- Card -->
-        <div class="card small hvr-grow fade-in four">
+        <div class="card small hvr-float fade-in four">
           <div class="card-image waves-effect waves-block waves-light"> <img class="activator" src="https://raw.githubusercontent.com/AndroidScout/AndroidScout.github.io/master/images/thumb-1.png"> </div>
           <div class="card-content"> <span class="card-title activator grey-text text-darken-4"><a href="#">[Review]The New LG G18</a><i class="material-icons right">launch</i></span>
             <p>How does the LG"s blah  blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah</p>
