Changed home page header text

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
   <section class="home active">
 
-    <h2>AndroidScout</h2>
+    <h2>Most Recent Uploads</h2>
     <div class="container"> <!-- Add margins to sides -->
       <div align="center" class="wrapper"> <!-- Aligns the content no matter size -->
 
