--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
 
 <div class="triangle_right">
-<h1 class="thattexttho" data-in-effect="flash">AndroidScout</h1>
+<h1 class="tlt" data-in-effect="flash">AndroidScout</h1>
 </div>
 
 <div class="contain">
