--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@ function toggle_in() {
 }
 
 $(function () {
-    $('.tlt').textillate({ in: { effect: 'flash' } });
+    $('.thattexttho').textillate({ in: { effect: 'flash' } });
 })
 
 </script>
