--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
 
 <div class="triangle_right">
-<span class="tlt">AndroidScout</span>
+<span class="thattexttho">AndroidScout</span>
 </div>
 
 <div class="contain">
