--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
 
 <div class="triangle_right">
-<h1 class="tlt" data-in-effect="flash">AndroidScout</h1>
+<span class="thattexttho" data-in-effect="pulse">AndroidScout</span>
 </div>
 
 <div class="contain">
@@ -145,7 +145,7 @@ function toggle_in() {
 }
 
 $(function () {
-    $('.tlt').textillate({ in: { effect: 'flash' } });
+    $('.thattexttho').textillate({ in: { effect: 'pulse' } });
 })
 
 </script>
