--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@ function toggle_in() {
 }
 
 $(function () {
-    $('.thattexttho').textillate({ in: { effect: 'pulse' } });
+    $('.thattexttho').textillate({ in: { effect: 'pulse', delayScale: 1, delay: 150,} });
 })
 
 </script>
