--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
 
 <div class="triangle_right">
-<h3 class="tlt" data-in-effect="rollIn">AndroidScout</h3>
+<h3 class="tlt" data-in-effect="flash">AndroidScout</h3>
 </div>
 
 <div class="contain">
