--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
             <!-- Thumbnail picture -->
           <div class="card-image waves-effect waves-block waves-light"> <img class="activator" src="https://raw.githubusercontent.com/AndroidScout/AndroidScout.github.io/master/images/thumb-1.png"> </div>
             <!-- Title -->
-          <div class="card-content"> <span class="card-title activator grey-text text-darken-4"><a href="#">[Review]The New LG G18</a><i class="material-icons right">launch</i></span>
+          <div class="card-content"> <span class="card-title activator grey-text text-darken-4"><a href="#" class="card_title_text">[Review]The New LG G18</a><i class="material-icons right">launch</i></span>
             <!-- Small decription -->
-            <p>How does the LG"s blah  blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah</p>
+            <p class="card_content_text">How does the LG"s blah  blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah</p>
           </div>
           <div class="card-reveal"> <span class="card-title grey-text text-darken-4">
             <!-- expand card -->
@@ -75,8 +75,8 @@
         <!-- Card -->
         <div class="card small hvr-float fade-in two">
           <div class="card-image waves-effect waves-block waves-light"> <img class="activator" src="https://raw.githubusercontent.com/AndroidScout/AndroidScout.github.io/master/images/thumb-1.png"> </div>
-          <div class="card-content"> <span class="card-title activator grey-text text-darken-4"><a href="#">[Review]The New LG G18</a><i class="material-icons right">launch</i></span>
-            <p>How does the LG"s blah  blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah</p>
+          <div class="card-content"> <span class="card-title activator grey-text text-darken-4"><a href="#" class="card_title_text">[Review]The New LG G18</a><i class="material-icons right">launch</i></span>
+            <p class="card_content_text">How does the LG"s blah  blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah</p>
           </div>
           <div class="card-reveal"> <span class="card-title grey-text text-darken-4">
             <h4>More info...</h4>
@@ -88,8 +88,8 @@
         <!-- Card -->
         <div class="card small hvr-float fade-in three">
           <div class="card-image waves-effect waves-block waves-light"> <img class="activator" src="https://raw.githubusercontent.com/AndroidScout/AndroidScout.github.io/master/images/thumb-1.png"> </div>
-          <div class="card-content"> <span class="card-title activator grey-text text-darken-4"><a href="#">[Review]The New LG G18</a><i class="material-icons right">launch</i></span>
-            <p>How does the LG"s blah  blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah</p>
+          <div class="card-content"> <span class="card-title activator grey-text text-darken-4"><a href="#" class="card_title_text">[Review]The New LG G18</a><i class="material-icons right">launch</i></span>
+            <p class="card_content_text">How does the LG"s blah  blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah</p>
           </div>
           <div class="card-reveal"> <span class="card-title grey-text text-darken-4">
             <h4>More info...</h4>
@@ -101,8 +101,8 @@
         <!-- Card -->
         <div class="card small hvr-float fade-in four">
           <div class="card-image waves-effect waves-block waves-light"> <img class="activator" src="https://raw.githubusercontent.com/AndroidScout/AndroidScout.github.io/master/images/thumb-1.png"> </div>
-          <div class="card-content"> <span class="card-title activator grey-text text-darken-4"><a href="#">[Review]The New LG G18</a><i class="material-icons right">launch</i></span>
-            <p>How does the LG"s blah  blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah</p>
+          <div class="card-content"> <span class="card-title activator grey-text text-darken-4"><a href="#" class="card_title_text">[Review]The New LG G18</a><i class="material-icons right">launch</i></span>
+            <p class="card_content_text">How does the LG"s blah  blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah</p>
           </div>
           <div class="card-reveal"> <span class="card-title grey-text text-darken-4">
             <h4>More info...</h4>
