--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@ function toggle_in() {
 }
 
 $(function () {
-$('.tlt').textillate({ in: { effect: 'slideInLeft' }});
+$('.tlt').textillate();
 })
 
 </script>
