--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
 
 <body class="fade-in bod">
 
-
+<div class="snow">
+	
+</div>
 <div class="triangle_right">
 <h3 class="tlt" data-in-effect="flash">AndroidScout</h3>
 </div>
