--- a/index.html
+++ b/index.html
@@ -27,27 +27,27 @@
 <script src="http://code.jquery.com/jquery-2.2.0.min.js"></script>
 
 <!-- jQuery script references -->
-<script src="js/jquery.fittext.js"></script>
-<script src="js/jquery.lettering.js"></script>
-<script src="js/jquery.textillate.js"></script>
+<script src="./js/jquery.fittext.js"></script>
+<script src="./js/jquery.lettering.js"></script>
+<script src="./js/jquery.textillate.js"></script>
 <script src="./js/materialize.js"></script> 
 <!-- end of jQuery script references -->
 
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-<link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
-<link href="css/hover.css" rel="stylesheet" media="all">
-<link href="css/animate.css" rel="stylesheet">
-<link rel="stylesheet" href="animate.min.css">
+<link href="./css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+<link href="./css/hover.css" rel="stylesheet" media="all">
+<link href="./css/animate.css" rel="stylesheet">
+<link rel="stylesheet" href="./css/animate.min.css">
 <link rel="stylesheet" href="./css/menu.css">
 </head>
 
 <body class="fade-in bod">
 
 <!-- Snow overlay -->
-<div class="snow"> </div>
+<!--<div class="snow"> </div>-->
 
-<div class="triangle_right">
-<h3 class="tlt" data-in-effect="flash">AndroidScout</h3>
+<div class="triangle">
+<h1 class="title" data-in-effect="flash">AndroidScout</h1>
 </div>
 
 <div class="contain">
@@ -55,6 +55,7 @@
   <section class="home active">
 
     <h2 class="home_header">Most Recent Uploads</h2>
+
     <div class="container"> <!-- Add margins to sides -->
       <div align="center" class="wrapper"> <!-- Aligns the content no matter size -->
 
