Changed .tlt to .title to allow textile to work.

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <script src="./js/jquery.fittext.js"></script>
 <script src="./js/jquery.lettering.js"></script>
 <script src="./js/jquery.textillate.js"></script>
-<script src="./js/materialize.js"></script> 
+<script src="./js/materialize.js"></script>
 <!-- end of jQuery script references -->
 
 <!-- CSS references -->
@@ -149,7 +149,7 @@
     <h2>Older Reviews</h2>
   </section>
 </div>
-<a class="toggle" href="#"> <span class="bar"></span> <span class="bar"></span> <span class="bar"></span> </a> 
+<a class="toggle" href="#"> <span class="bar"></span> <span class="bar"></span> <span class="bar"></span> </a>
 <script type="text/javascript">
 
   $("a.toggle").on("click", toggle_out)
@@ -172,7 +172,7 @@ function toggle_in() {
 }
 
 $(function () {
-$('.tlt').textillate();
+$('.title').textillate();
 })
 
 jQuery("#responsive_headline").fitText();
