--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 
 <!-- CSS references -->
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-<link href="./css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
-<link href="./css/hover.css" rel="stylesheet" media="all">
+<link href="./css/materialize.css" type="text/css" rel="stylesheet" media="screen"/>
+<link href="./css/hover.css" rel="stylesheet">
 <link href="./css/animate.css" rel="stylesheet">
 <link rel="stylesheet" href="./css/animate.min.css">
 <link rel="stylesheet" href="./css/menu.css">
