Fix title text for each page

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
     </div> <!-- end of container-->
   </section><!-- end of page -->
   <section class="latest">
-    <h2 class="home_header">Most Recent Uploads</h2>
+    <h2 class="home_header">Latest Uploads</h2>
 
     <div class="container"> <!-- Add margins to sides -->
       <div align="center" class="wrapper"> <!-- Aligns the content no matter size -->
@@ -204,7 +204,7 @@
     </div> <!-- end of container-->
   </section>
   <section class="eariler">
-    <h2 class="home_header">Most Recent Uploads</h2>
+    <h2 class="home_header">Earlier Uploads</h2>
 
     <div class="container"> <!-- Add margins to sides -->
       <div align="center" class="wrapper"> <!-- Aligns the content no matter size -->
@@ -268,7 +268,7 @@
     </div> <!-- end of container-->
   </section>
   <section class="older">
-    <h2 class="home_header">Most Recent Uploads</h2>
+    <h2 class="home_header">Older Uploads</h2>
 
     <div class="container"> <!-- Add margins to sides -->
       <div align="center" class="wrapper"> <!-- Aligns the content no matter size -->
