Why didn't my changes apply

--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
     </div> <!-- end of container-->
   </section>
   <section class="eariler">
-    <h2 class="home_header">Earlier Uploads</h2>
+    <h2 class="home_header">Earlier Uploads</h2> <!---->
 
     <div class="container"> <!-- Add margins to sides -->
       <div align="center" class="wrapper"> <!-- Aligns the content no matter size -->
