added a fun tooltip

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
 - Copyright © 2016 AndroidScout. All rights reserved.
 - Email of WebMaster: minimalistsoftware@gmail.com
 -->
+
 <html>
 <head>
 <title>AndroidScout</title>
-<!-- Imports-->
 
 <!-- jQuery -->
 <script src="http://code.jquery.com/jquery-2.2.0.min.js"></script>
@@ -61,6 +61,7 @@
 <meta name="msapplication-TileImage" content="./fav/ms-icon-144x144.png">
 <meta name="theme-color" content="#ffffff">
 <!-- end of Large ass fav icon reference -->
+
 </head>
 
 <body class="fade-in bod">
@@ -68,9 +69,15 @@
 <!-- Snow overlay -->
 <!--<div class="snow"> </div>-->
 
-<!--<div class="triangle">
+
+<!--
+
+<div class="triangle">
 <h1 class="title" data-in-effect="flash">AndroidScout</h1>
-</div>-->
+</div>
+
+-->
+
 
 <div class="contain">
 
@@ -82,7 +89,7 @@
       <div align="center" class="wrapper"> <!-- Aligns the content no matter size -->
 
         <!-- Card -->
-        <div class="card small hvr-float fade-in one">
+        <div class="card small hvr-float fade-in one tooltipped" data-position="bottom" data-delay="50" data-tooltip="I'm a tooltip!">
             <!-- Thumbnail picture -->
           <div class="card-image waves-effect waves-block waves-light"> <img class="activator" src="https://raw.githubusercontent.com/AndroidScout/AndroidScout.github.io/master/images/thumb-1.png"> </div>
             <!-- Title -->
