Fixed rendering for Garrett.

--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
 	<link rel="stylesheet" type="text/css" href="./css/jquery.fullPage.css" />
   <link rel="stylesheet" type="text/css" href="./css/styles.css" />
 	<style>
+	body {
+		  text-rendering: optimizeLegibility;
+	}
 	/* Fixed header and footer.*/
 	#header, #footer{
 		position:fixed;
