Added link to backend testing server.

--- a/index.html
+++ b/index.html
@@ -57,6 +57,9 @@
 	div#slide3 {
 		background-color: #f15a21 !important;
 	}
+	a {
+		color: inherit;
+	}
 	</style>
 
 	<!--[if IE]>
@@ -73,7 +76,7 @@
 </head>
 <body>
 
-<div id="header"><h1>ANDROID SCOUT<h1></div>
+<div id="header"><a href="http://twopeaceextraspicy.com/as/index.html"><h1>ANDROID SCOUT<h1></a></div>
 
 <!-- MAIN SCROLL -->
 <div id="fullpage">
