--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         <h4>Crafted to delight</h4>
         <p>Some things just look better in motion and in the highly competitive world of fashion, finding an edge over the competition is crucial. When it comes to clothes, hair, make-up and jewellery nothing compares to seeing moving images. So why not give your audience what they prefer?</p>
         <a href="#">
-          <button type="button" class="btn btn-info waves-effect waves-light" onclick="javascript:window.location = 'content.php'">Read more</button>
+          <button type="button" class="btn btn-info waves-effect waves-light">Read more</button>
         </a>
       </div>
     </div>
